# SDL_Engine

./: .gitignore  CMakeLists.txt  SDL_Engine.docx  main.cpp
include/: Button.h  Engine.h  Entity.h  GameObject.h  InputHandler.h  Level.h  Menu.h  RenderObject.h  Text.h  TextBox.h  Timer.h  Vector2.h  Window.h
src/: Entity.cpp  GameObject.cpp  InputHandler.cpp  Level.cpp  RenderObject.cpp  Text.cpp  Timer.cpp  Vector2.cpp  Window.cpp
